# synthetic_data_generation

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  synthesis.yml
examples/data/: README.md
examples/data/input/: ~$ScanReport.xlsx
examples/data/input_data/: adult_8c.csv
examples/data/output_data/: adult_8c_MarginalSynthesizer_1eps.csv  adult_8c_MetaSynthesizer_1eps.csv  (+2 more)
examples/tutorials/: example 1 - creating a synthetic dataset.ipynb  example 1 - how to generate synthetic data.ipynb  example 2 - capturing patterns between features.ipynb  example 2 - generating complex tabular data.ipynb  example 2 - how to preserve statistical patterns between columns.ipynb  example 3 - generating sequential data.ipynb  example 4 - evaluating synthetic data.ipynb
synthesis/: __init__.py  _base_synthesis.py  bayes_synthesis.py  hist_synthesis.py  meta_synthesis.py
synthesis/evaluation/: __init__.py  _base.py  efficacy.py  evaluator.py  experiment.py  metrics.py  models.py  privacy.py  statistics.py  utility_evaluator.py  visual.py
synthesis/preprocessing/: continuous.py  date_sequence.py  dates.py  discretization.py
synthesis/synthesizers/: README.md  __init__.py  _base.py  contingency.py  marginal.py  privbayes.py  utils.py
synthesis/tools/: dp_utils.py  experiment.py  utils.py
synthesis/transformers/: README.md  __init__.py  _base.py  deidentifcation.py  deidentification.py  discretization.py  generalization.py  sequence.py  suppression.py
tests/: test_HistSynthesizer.py
tests/transformers/: test_generalization.py
(+8 files in other folders)
